Adjust chart width to fix gaps chart sometimes being too wide

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -16,7 +16,7 @@ a {
 }
 
 .chart {
-  width:100%;
+  max-width:100%;
   height:725px;
 }
 .sectors {
